--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -36,3 +36,17 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_details: percentage
+
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: 1995parham
+          template: classic
+          base: ""
+          filename: streak.svg
+          plugin_habits: yes
+          plugin_habits_from: 200
+          plugin_habits_days: 30
+          plugin_habits_charts: yes
+          plugin_habits_charts_type: classic
+          plugin_habits_trim: yes
