--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,15 +18,8 @@ jobs:
           template: classic
           base: header, activity, community, repositories
           config_timezone: Asia/Tehran
+          config_order: base.header, languages, habits
           filename: metrics.svg
-
-      - uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          user: 1995parham
-          template: classic
-          base: ""
-          filename: languages.svg
           plugin_languages: yes
           plugin_languages_indepth: yes
           plugin_languages_analysis_timeout: 15
@@ -36,14 +29,6 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_details: percentage
-
-      - uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          user: 1995parham
-          template: classic
-          base: ""
-          filename: streak.svg
           plugin_habits: yes
           plugin_habits_from: 200
           plugin_habits_days: 30
