feat: use maintained version of the metrics

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,24 +11,14 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - uses: gh-metrics/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: 1995parham
           template: classic
           base: header, activity, community, repositories
           config_timezone: Asia/Tehran
-          config_order: base.header, languages, habits
           filename: metrics.svg
-          plugin_languages: yes
-          plugin_languages_indepth: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
-          plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used
-          plugin_languages_details: percentage
           plugin_habits: yes
           plugin_habits_from: 200
           plugin_habits_days: 30
