--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: gh-metrics/metrics@latest
+      - uses: gh-metrics/metrics@main
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: 1995parham
